--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            overflow:hidden;
+        } 
         body {
             background-image: url("flo.jpg");
             background-repeat: no-repeat;
